k8s/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: app-ingress-resource
  namespace: app

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8081

          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8082
